# kernel

./: Cargo.toml  build.rs  flake.nix  linker.ld  rpi4.ld  rust-toolchain
.cargo/: config.toml
src/: global.rs  logger.rs  main.rs  panic.rs  qemu.rs  start.s  uart.rs
src/arch/x86_64/: mod.rs  port.rs
src/console/: mod.rs  noop.rs  serial.rs
src/memory/: addr.rs  early.rs  frame.rs  mod.rs  paging.rs  region.rs
src/memory/allocator/: early.rs  frame.rs  mod.rs
src/sync/: spin.rs
targets/: x86_64.json
targets/x86_64/: kernel.ld  target.json
