[package]
name = "kernel"
version = "0.0.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
log = "0.4"
derive_more = { version = "2.0.1", default-features = false, features = ["display", "add", "add_assign", "from"] }
bitvec = { version = "1.0.1", default-features = false }
multiboot2 = { version = "0.24.0", default-features = false }
